# bookstore_python

./: .gitignore  .project  Dockerfile  README.md  conftest.py  docker-compose.yml  env.dev  pyproject.toml  requirements.txt  vercel.json
.dbeaver/: .credentials-config.json.bak  .data-sources.json.bak  credentials-config.json  data-sources.json  project-settings.json
.vercel/: project.json
bookstore_python/: asgi.py  settings.py  urls.py  views.py  wsgi.py
order/: factories.py
order/migrations/: 0001_initial.py
order/test_viewsets/: order_test_viewset.py
order/viewsets/: order_viewset.py
product/migrations/: 0001_initial.py
product/serializers/: product_serializer.py
product/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: product_viewset.py
